updated css file to fix logo centering on mobile

--- a/plugins/local/public/assets/theme.css
+++ b/plugins/local/public/assets/theme.css
@@ -42,7 +42,7 @@ body {
 }
 
 #header {
-  padding: 0 25px 10px 50px;
+  padding: 0 25px 10px 25px;
   background: #00386B;
 }
 
